--- a/miniprogram/pages/User/User.wxss
+++ b/miniprogram/pages/User/User.wxss
@@ -1,15 +1,17 @@
 /* miniprogram/pages/test/test.wxss */
 .all{
-  display: inline-flex;
+  display: flex;
   width:100%;
-  height:100%;
+  height:350rpx;
   background-color:rgba(236, 227, 236, 0.973);
 }
 .Head{
+  overflow:hidden;
   margin-top:50rpx;
   width: 200rpx;
   height:200rpx;
   border-radius: 50%;
+  box-shadow: 3px 3px 10px rgba(36, 2, 2, 0.3);
 }
 .Name{
   height: 20rpx;
